# StarFish

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
public/: index.html
src/: index.css  index.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/command/: Cargo.toml
src-tauri/command/src/: command.rs
src-tauri/events/: Cargo.toml
src-tauri/events/src/: constant.rs  events.rs
src-tauri/icons/: icon.icns
src-tauri/net/: Cargo.toml
src-tauri/net/src/: card.rs  lib.rs  net.rs  pack.rs
src-tauri/src/: main.rs
src-tauri/src/command/: command.rs  mod.rs  windows.rs
src-tauri/src/events/: events.rs  mod.rs
src-tauri/src/net/: card.rs  net.rs  pack.rs
src-tauri/src/os/: basis.rs  mod.rs
src/comm/: command.ts  constant.jsx  constant.ts  env.ts  global.ts  i18n.ts  types.ts
src/css/page/: api-page.css  index-page.css
src/page/: IndexPage.tsx  SettingPage.tsx
src/page/index/: Api.tsx  Cpu.tsx  Disk.tsx  Downloader.tsx  Foot.tsx  IndexPage.tsx  LeftMenu.tsx  Memory.tsx  NetPacket.tsx  NetPacketDataTable.tsx  OSBasis.tsx  Process.tsx  Wifi.tsx
src/page/setting/: SettingPage.tsx
