[package]
edition = "2021"
name = "command"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
net = {path = "../net"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.4.0", features = []}
